Fixed other bugs

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="mision">
         <div class="container flex">
             <div class="img-cont">
-                <img src="./img/quienes-somos-bg.jpg" alt="">                
+                <img src="./img/qs-bg.png" alt="">                
             </div>
             <div class="mision-text">
                 <h2>Misión</h2>
@@ -74,7 +74,7 @@
                 </p>
             </div>
             <div class="img-cont">
-                <img src="./img/quienes-somos-bg.jpg" alt="">                
+                <img src="./img/qs-bg.png" alt="">                
             </div>
         </div>
     </section>
