Updates and new things

--- a/concurso.html
+++ b/concurso.html
@@ -36,76 +36,48 @@
         </div>
     </div>
 
-    <section class="quienes-somos">
-        <div class="qs-container flex">
-            <div class="title">
-                <h1>¿Quiénes<br>somos?</h1>
-            </div>
-            <div class="opacity">oe</div>
-        </div>
-        <div class="qs-text card">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio iure provident aperiam ipsa blanditiis totam excepturi officia porro officiis ipsum iusto nesciunt amet maiores, pariatur accusantium, veritatis, possimus natus id delectus temporibus quam repellat voluptate! Odit consequatur magnam dolorem iste, excepturi ad voluptatum aspernatur sint ab nulla qui repellat at?</p>
+    <div class="concurso-title-container flex">
+        <h1>Concurso de artes plásticas: "Así se construye memoria".</h1>
+        <a href="#inscripcion" class="inscripcion">Inscríbete!</a>
+    </div>
+
+    <section class="concurso-historia">
+        <div class="historia-cont short-container card">
+            <h2>Historia</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Voluptatem officia eveniet quisquam sint et fugiat earum 
+                molestias, quia, soluta tempora maiores sit velit accusantium. 
+                Consectetur aspernatur quis aut, dolore iure cum tempore 
+                aliquam consequuntur eligendi quaerat cupiditate eum. Amet 
+                necessitatibus assumenda cum harum deserunt sunt illum voluptate, 
+                officiis neque nostrum dignissimos magni deleniti optio doloremque, 
+                aliquam dolorum praesentium, sapiente blanditiis!
+            </p>
+            <iframe width="70%" height="350px" src="https://www.youtube.com/embed/vLCdycTRoQI?autoplay=1&loop=1" frameborder="0"></iframe>
         </div>
     </section>
 
-    <section id="mision" class="mision">
-        <div class="container flex">
-            <div class="img-cont">
-                <img src="./img/qs-bg.png" alt="">                
-            </div>
-            <div class="mision-text card">
-                <h2>Misión</h2>
-                <p>
-                    Contribuir con la paz, la reconciliación, el arte y la justicia,
-                    nos inspiran a trabajar por los Colombianos, construir la memoria
-                    histórica de nuestro país nos acerca a la verdad y nos permite
-                    compartir la historia desde la perspectiva de cada uno de los 
-                    agentes del conflicto armado, por eso, nuestra labor es contar, 
-                    exaltar, recordar y declarar que Colombia es un territorio de paz. 
-                </p>
-            </div>
+    <section id="inscripcion" class="concurso-inscripcion">
+        <div class="inscripcion-cont short-container card">
+            <h2>Prerrequisitos de inscripción</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam 
+                illum modi cupiditate doloribus distinctio corporis, minus 
+                commodi voluptas dolorum quo aut, assumenda dicta vitae
+                <a class="ver-pre" href="">Ver <i class="fa-solid fa-angle-down"></i></a>
+                <a class="down-pre" href="">Descargar</a>
+            </p>
+            <form action="">
+                <label for="">
+                    <input type="checkbox">
+                    Acepto los Terminos y condiciones y estoy de acuerdo con 
+                    los prerrequisitos para participar en el concurso.
+                </label>
+            </form>
         </div>
     </section>
 
-    <section id="vision" class="vision">
-        <div class="container flex">
-            <div class="vision-text card">
-                <h2>Visión</h2>
-                <p>
-                    Para el año 2030 proyectamos continuar siendo la exposición más 
-                    grande de Las Américas sobre memoria histórica, para lo cual habremos
-                    recorrido los Municipios y Departamentos que padecieron los flagelos
-                    de la guerra para conocer sus relatos y presentarlos en diferentes 
-                    escenarios a nivel nacional e internacional a través de alianzas 
-                    estratégicas que nos permitan contribuir y afianzar la paz en Colombia, 
-                    la construcción de la memoria histórica y la reconciliación retribuirá 
-                    a los Colombianos y nos acercará a un territorio de nuevas oportunidades, 
-                    equidad y justicia.
-                </p>
-            </div>
-            <div class="img-cont">
-                <img src="./img/qs-bg.png" alt="">                
-            </div>
-        </div>
-    </section>
-
-    <section id="valores" class="valores">
-        <div class="container flex">
-            <div class="img-cont">
-                <img src="./img/qs-bg.png" alt="">                
-            </div>
-            <div class="valores-text card">
-                <h2>Valores</h2>
-                <p>
-                    Trabajamos con pasión, compromiso, perseverancia, dedicación, respeto, 
-                    tenacidad, constancia y amor para brindarles a los Colombianos un 
-                    territorio de paz y reconciliación, con apoyo del trabajo arduo de la 
-                    justicia y defensa de los DDHH de quienes lo necesitan. 
-                </p>
-            </div>
-        </div>
-    </section>
-    
     <footer id="contacto">
         <h1>Contáctanos</h1>
         <div class="container flex">
