--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
                 <ul class="flex relative">
                     <li>
                         <div class="nosotros">
-                            <a href="index.html" class="dropbtn">Nosotros</a>
-                            <div class="dropdown-content">
+                            <a href="index.html" class="dropbtn">
+                                Nosotros <i class="fa-solid fa-chevron-down"></i>
+                            </a>
+                            <div class="dropdown-content-nosotros">
                               <a href="index.html#mision">Misión</a>
                               <a href="index.html#vision">Visión</a>
                               <a href="index.html#valores">Valores</a>
@@ -27,7 +29,17 @@
                             </div>
                         </div>
                     </li>
-                    <li><a href="concurso.html">Concurso</a></li>
+                    <li>
+                        <div class="concurso">
+                            <a href="concurso.html">
+                                Concurso <i class="fa-solid fa-chevron-down"></i>
+                            </a>
+                            <div class="dropdown-content-concurso">
+                                <a href="concurso.html#historia">Historia</a>
+                                <a href="concurso.html#inscripcion">Prerrequisitos</a>
+                            </div>
+                        </div>
+                    </li>
                     <li><a href="#">Galería</a></li>
                     <li><a href="#">Noticias</a></li>
                     <li><a class="donar" href="#">Donar</a></li>
@@ -44,14 +56,28 @@
             <div class="opacity">oe</div>
         </div>
         <div class="qs-text card">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio iure provident aperiam ipsa blanditiis totam excepturi officia porro officiis ipsum iusto nesciunt amet maiores, pariatur accusantium, veritatis, possimus natus id delectus temporibus quam repellat voluptate! Odit consequatur magnam dolorem iste, excepturi ad voluptatum aspernatur sint ab nulla qui repellat at?</p>
+            <p>
+                En el año 2018, los oficiales profesionales de reserva <b>ST.RVA. CARRANZA
+                ALEJANDRO Y ST. RVA ABRIL JULIETH</b> y un grupo de oficiales de <b>CACOM 4 de la
+                Fuerza Aérea Colombiana</b>, comenzaron a gestar un proyecto de <b>CONSTRUCCIÓN
+                DE MEMORIA HISTÓRICA</b>, donde se busca plasmar con el arte aquello que no se
+                puede contar con palabras; mostrando la realidad histórica del país a través de un
+                concurso de artes plásticas donde la población en general, militares, víctimas del
+                conflicto, excombatientes, niños, estudiantes de colegios y universidades, policías,
+                desmovilizados, profesionales y amateur participan para construir <b>Memoria Histórica
+                de Colombia</b>, a través de obras de arte en todas sus manifestaciones como escultura y pintura.                                                                                                                        Este concurso, es la <b>GALERÍA ITINERANTE DE ARTE MÁS GRANDE DE AMÉRICA
+                LATINA</b>. Tuvo su génesis en el departamento del <b>Tolima</b> con apoyo del Comando
+                Aéreo de Combate #4 en Melgar, en el departamento de <b>Boyacá</b> con el apoyo del
+                Comando Conjunto Estratégico de Transición y en la ciudad de <b>Bogotá</b> con el
+                apoyo del Teatro Bellas Artes de Cafam.
+            </p>
         </div>
     </section>
 
     <section id="mision" class="mision">
         <div class="container flex">
             <div class="img-cont">
-                <img src="./img/qs-bg.png" alt="">                
+                <img src="./img/imagen mision.PNG" alt="">                
             </div>
             <div class="mision-text card">
                 <h2>Misión</h2>
@@ -84,7 +110,7 @@
                 </p>
             </div>
             <div class="img-cont">
-                <img src="./img/qs-bg.png" alt="">                
+                <img src="./img/imagen vision.PNG" alt="">                
             </div>
         </div>
     </section>
@@ -92,7 +118,7 @@
     <section id="valores" class="valores">
         <div class="container flex">
             <div class="img-cont">
-                <img src="./img/qs-bg.png" alt="">                
+                <img src="./img/imagen valores.jpg" alt="">                
             </div>
             <div class="valores-text card">
                 <h2>Valores</h2>
@@ -108,7 +134,7 @@
     
     <footer id="contacto">
         <h1>Contáctanos</h1>
-        <div class="container flex">
+        <div class="flex">
             <div class="footer-left">
                 <div class="img">
                     <img src="./img/logo colcree .png" alt="">
@@ -116,7 +142,7 @@
                 <h3>Bogotá, Carrera 72 A No 55 - 28</h3>
             </div>
             <div class="footer-right">
-                <ul class="grid">
+                <ul class="grid gap">
                     <li>
                         <a href="https://instagram.com/funcolcree?igshid=YmMyMTA2M2Y=" target="_blank">
                             <i class="fa-brands fa-instagram"></i>
@@ -132,7 +158,8 @@
                     <li>
                         <a href="https://instagram.com/funcolcree?igshid=YmMyMTA2M2Y=" target="_blank">
                             <i class="fa-solid fa-envelope"></i>
-                            concursoartesplas<br>ticas@gmail.com
+                            fundacioncolcree@gmail.com
+
                         </a>
                     </li>
                     <li>
